Update field user API
